# PenguinSlideOGL

./: CMakeLists.txt
DemoTemplateOGL/DemoTemplateOGL/: DemoTemplateOGL.cpp  GameManager.cpp  GameManager.h  NoiseGenerator.cpp  NoiseGenerator.h  Scenario.cpp  Scenario.h  TerrainChunk.cpp  TerrainChunk.h  Terreno.cpp  Terreno.h  Water.h
DemoTemplateOGL/DemoTemplateOGL/Base/: Scene.h  Utilities.cpp  camera.h  model.cpp
DemoTemplateOGL/DemoTemplateOGL/InputDevices/: KeyboardInput.cpp
DemoTemplateOGL/DemoTemplateOGL/models/: models
DemoTemplateOGL/DemoTemplateOGL/models/blueWhale/: BlueWhale.fbx
DemoTemplateOGL/DemoTemplateOGL/models/blueWhale/blueWhale/: uploads_files_5014572_Whale_Quad(1).fbx
DemoTemplateOGL/DemoTemplateOGL/models/car/source/: car1.fbx
DemoTemplateOGL/DemoTemplateOGL/models/carro/: antartic.mtl  carrito.fbx
DemoTemplateOGL/DemoTemplateOGL/models/cave/: Cave.fbx  Cueva.fbx
DemoTemplateOGL/DemoTemplateOGL/models/cone/: Cono.fbx
DemoTemplateOGL/DemoTemplateOGL/models/cookie/: Cookie.fbx
DemoTemplateOGL/DemoTemplateOGL/models/cookie/source/: Galleta.fbx
DemoTemplateOGL/DemoTemplateOGL/models/ice_cube/: IceCube_fbx.fbx
DemoTemplateOGL/DemoTemplateOGL/models/icecream/source/: ICECREAM.fbx
DemoTemplateOGL/DemoTemplateOGL/models/igloo/source/: Bigloo.glb  cabana.glb
DemoTemplateOGL/DemoTemplateOGL/models/killerWhale/: killerWhale.fbx
DemoTemplateOGL/DemoTemplateOGL/models/obstaculo/source/: obstacles_hill.fbx
DemoTemplateOGL/DemoTemplateOGL/models/penguin/: Flying.fbx  Idle.fbx  Idle_jumping.fbx  Jogging.fbx  Jumping.fbx  Skateboarding.fbx  fall.fbx  jump.fbx  penguin.fbx  pinguinito.blend  pinguinito.blend1  slide.fbx
DemoTemplateOGL/DemoTemplateOGL/models/rock/: roca.fbx
DemoTemplateOGL/DemoTemplateOGL/models/seagull/: Sketchfab_2022_02_14_15_08_30.blend  Sketchfab_2022_02_14_15_08_30.blend1  seagull.fbx
DemoTemplateOGL/DemoTemplateOGL/models/ship/: Ship.fbx
DemoTemplateOGL/DemoTemplateOGL/models/ship/source/: Barco.fbx  alligatorclass.glb
DemoTemplateOGL/DemoTemplateOGL/models/snowman/: snowbad.fbx  snowevil.fbx  snowman.fbx
DemoTemplateOGL/DemoTemplateOGL/models/snowman/source/: snowman.fbx
DemoTemplateOGL/DemoTemplateOGL/models/stop/: model.dae
DemoTemplateOGL/DemoTemplateOGL/models/tire/: Tire.c4d
DemoTemplateOGL/DemoTemplateOGL/shaders/: shaders  terrain.fs  terrain.vs  water.fs  water.vs
DemoTemplateOGL/DemoTemplateOGL/skydome/: skydome
DemoTemplateOGL/DemoTemplateOGL/textures/: textures
